# filemod

./: .clangd  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp  meson.build  meson.options  vcpkg.json
.github/workflows/: debug-build-test.yml  release-build-test-upload.yml  release.yml  test.yml
debian/: control.in
filemod/: CMakeLists.txt
filemod/cmake/: filemodConfig.cmake.in
filemod/include/filemod/: fs.hpp  modder.hpp  sql.hpp  utils.hpp
filemod/src/: fs.cpp  modder.cpp  sql.cpp  utils.cpp
filemod/src/win32/: utils.cpp
filemodlib/: CMakeLists.txt
filemodlib/include/filemod/: modder.hpp  sql.hpp  utils.hpp
filemodlib/src/: fs.cpp  modder.cpp  sql.cpp  utils.cpp
include/: filemod.h
libfilemod/: CMakeLists.txt  meson.build
libfilemod/cmake/: filemod-config.cmake.in
libfilemod/include/filemod/: fs.hpp  fs_archive.hpp  fs_manager.hpp  fs_rec.hpp  fs_tx.hpp  fs_utils.hpp  modder.hpp  sql.hpp  utils.hpp
libfilemod/include/filemod/private/: utils.hpp
libfilemod/src/: fs.cpp  fs_archive.cpp  fs_manager.cpp  fs_tx.cpp  fs_utils.cpp  modder.cpp  modder_archive.cpp  sql.cpp  utils.cpp
libfilemod/src/linux/: utils.cpp
libfilemod/src/win32/: utils.cpp
libfilemod/test/: testfs.cpp  testhelper.cpp  testhelper.hpp  testmodder.cpp  testsql.cpp
src/: filemod.cpp  filemod.h  filemodfs.h  filemodsql.cpp  filemodsql.h  fs.cpp  fs.h  main.cpp  sql.cpp  sql.h  utils.cpp  utils.h
subprojects/: boost.wrap  libarchive.wrap  sqlite3.wrap
test/: CMakeLists.txt  dummy_test.cpp  testfilemod.cpp  testfs.cpp  testhelper.h  testhelper.hpp  testmodder.cpp  testsql.cpp
